# LegacyGraph-MCP

./: .gitignore  PROJECT_MANUAL.md  README.md  final_test_check.txt  find_fastmcp.py  pyproject.toml  smithery.yaml  verifier_final.txt
data/legacy_project/: main.cpp  utils.cpp
src/: graph.py  parser.py  server.py
tests/: test_core.py
tools/: verifier.py
